eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simplebank-backend
spec:
  replicas: 2 # ขยายแอปพลิเคชันหน้าบ้านออกเป็น 2 ตัวช่วยรับโหลด
  selector:
    matchLabels:
      app: simplebank-backend
  template:
    metadata:
      labels:
        app: simplebank-backend
    spec:
      containers:
      - name: backend-container
        image: 952365419960.dkr.ecr.ap-southeast-2.amazonaws.com/github/simple-bank:latest
        imagePullPolicy: Always # ให้ดึง Image ใหม่ทุกครั้งที่มีการ Deploy
        ports:
        - containerPort: 8080
